# nativ-mcp

./: .gitignore  LICENSE  README.md  glama.json  pyproject.toml  server.json
npm/: package.json
src/nativ_mcp/: __init__.py  server.py
